--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,7 @@
 @import "tailwindcss";
+
+@layer components {
+    .btn-primary {
+        @apply bg-primary text-accent px-4 py-2 rounded-lg hover:bg-tertiary transition;
+    }
+}
